--- a/U6/universidad/src/main/resources/templates/fragments/parts.html
+++ b/U6/universidad/src/main/resources/templates/fragments/parts.html
@@ -17,6 +17,8 @@
 				</li>
 				<li sec:authorize="hasRole('ROLE_USER')" class="nav-item"><a class="nav-link text-white " th:href="@{/services}" th:text="#{menu.services}"></a>
 				</li>
+				<li sec:authorize="hasRole('ROLE_USER')" class="nav-item"><a class="nav-link text-white " th:href="@{/alumns}" th:text="#{menu.alumns}"></a>
+				</li>
 				<li  sec:authorize="hasRole('ROLE_USER')" class="nav-item"><a class="nav-link text-white" th:href="@{/about}" th:text="#{menu.about}"></a></li>
 				<li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link text-white" th:href="@{/logout}"><i class="bi bi-box-arrow-left"></i></a></li>
 				<li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link text-white" th:href="@{/register}" th:text="#{menu.register}"></a>
