--- a/U6/SPRING_COMPLETO/src/main/resources/templates/editGrado.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/editGrado.html
@@ -14,7 +14,7 @@
 					<input type="text" class="form-control" id="nombre" name="nombre"
 						th:field="*{nombre}" required>						
 					<h6 class="text-danger" th:if="${error!=null}" th:text="${'Grado existente'}"></h6>	
-					<input type="submit" class="btn btn-primary w-100 mt-3" value="AÑADIR" />	
+					<input type="submit" class="btn btn-primary w-100 mt-3" value="ACTUALIZAR" />	
 				</form>
 			</div>
 			<footer th:replace="fragments/parts::footer(info='menu.addgrado')"></footer>
