--- a/U6/SPRING_COMPLETO/src/main/resources/templates/editProfesor.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/editProfesor.html
@@ -21,7 +21,7 @@
 						th:field="*{apellido1}" required>
 					<label for="apellido2" class="form-label mt-3">Apellido 2</label>
 					<input type="text" class="form-control" id="apellido2" name="apellido2"
-						th:field="*{apellido1}" >		
+						th:field="*{apellido2}" >		
 					<label for="ciudad" class="form-label mt-3">Ciudad</label>
 					<input type="text" class="form-control" id="ciudad" name="ciudad"
 						th:field="*{ciudad}" required>		
@@ -31,15 +31,18 @@
 					<label for="telefono" class="form-label mt-3">Telefono</label>
 					<input type="text" class="form-control" id="telefono" name="telefono"
 						th:field="*{telefono}" >	
-					<label for="direccion" class="form-label mt-3">Direccion</label>
-					<input type="text" class="form-control" id="direccion" name="direccion"
-						th:field="*{direccion}" required>
 					<label for="fecha_nacimiento" class="form-label mt-3">Fecha Nacimiento</label>
 					<input type="text" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento"
 						th:field="*{fechaNacimiento}" required>	
 					<label for="sexo" class="form-label mt-3">Sexo</label>
 					<input type="text" class="form-control" id="sexo" name="sexos"
 						th:field="*{sexo}" required>
+					<label for="departamentos" class="form-label mt-3">Departamento</label>
+					<select name="departamento" class="form-select mt-3">
+                        <th:block th:each="d : ${departamentos}">
+                                <option th:value="${d.getId()}" th:text="${d.getNombre()}" th:field="*{departamento}"></option>
+                        </th:block>
+					</select>
 						
 					<h6 class="text-danger" th:if="${error!=null}" th:text="${'Profesor existente'}"></h6>	
 					<input type="submit" class="btn btn-primary w-100 mt-3" value="ACTUALIZAR" />	
