--- a/U6/SPRING_COMPLETO/src/main/resources/templates/profesores.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/profesores.html
@@ -4,6 +4,9 @@
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
 			<header th:insert="fragments/parts::menu"></header>
+			<div class="row mt-3 justify-content-end">
+            	<a class="text-center col-2 btn btn-primary" th:href="@{/profesores/add}">Añadir Profesor</a>
+            </div>
 			<div class="col-8">
 				<h1 class="text-center">Lista de profesores</h1>
 				<table class="table table-stripped table-hover">
@@ -19,6 +22,7 @@
 							<th>Fecha de Nacimiento</th>
 							<th>Ciudad</th>
 							<th>Sexo</th>
+							<th>Departamento</th>
 							<th></th>
 						</tr>
 					</thead>
@@ -34,6 +38,7 @@
 							<td th:text="${p.getFechaNacimiento()}"></td>
 							<td th:text="${p.getCiudad()}"></td>
 							<td th:text="${p.getSexo()}"></td>
+							<td th:text="${p.getDepartamento().getNombre()}"></td>
 							<td><a th:href="@{'/profesores/edit?prof='+${p.getId()}}"><i class="bi bi-pen-fill"></i></a></td>
 						</tr>
 					</tbody>
