--- a/U6/SPRING_COMPLETO/src/main/resources/templates/alumnos.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/alumnos.html
@@ -4,21 +4,25 @@
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
 			<header th:insert="fragments/parts::menu"></header>
+			<div class="row mt-3 justify-content-end">
+				<a class="text-center col-2 btn btn-primary" th:href="@{/alumnos/add}" th:text="#{menu.addAlumn}"></a>
+			</div>
 			<div class="col-8">
-				<h1 class="text-center">Lista de alumnos</h1>
+				<h1 class="text-center" th:text="#{list.alumn}"></h1>
 				<table class="table table-stripped table-hover">
 					<thead class="table-light">
 						<tr>
 							<th>ID</th>
 							<th>NIF</th>
-							<th>Nombre</th>
-							<th>Primer Apellido</th>
-							<th>Segundo Apellido</th>
-							<th>Direccion</th>
-							<th>Telefono</th>
-							<th>Fecha de Nacimiento</th>
-							<th>Ciudad</th>
-							<th>Sexo</th>
+							<th th:text="#{name}"></th>
+							<th th:text="#{firstName}"></th>
+							<th th:text="#{secondName}"></th>
+							<th th:text="#{direction}"></th>
+							<th th:text="#{phoneNumber}"></th>
+							<th th:text="#{dateBirthady}"></th>
+							<th th:text="#{city}"></th>
+							<th th:text="#{sex}"></th>
+							<th></th>
 							<th></th>
 						</tr>
 					</thead>
@@ -35,6 +39,7 @@
 							<td th:text="${a.getCiudad()}"></td>
 							<td th:text="${a.getSexo()}"></td>
 							<td><a th:href="@{'/alumnos/asignaturas?codigo='+${a.getId()}}"><i class="bi bi-journal-bookmark-fill"></i></a></td>
+							<td><a th:href="@{'/alumnos/edit?alumn='+${a.getId()}}"><i class="bi bi-pen-fill"></i></a></td>
 						</tr>
 					</tbody>
 				</table>
