--- a/U6/SPRING_COMPLETO/src/main/resources/templates/alumnosAsignaturas.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/alumnosAsignaturas.html
@@ -11,10 +11,10 @@
 					<thead class="table-light">
 					<tr>
 						<th>ID</th>
-						<th>Nombre</th>
-						<th>Creditos</th>
-						<th>Curso</th>
-						<th>Nota</th>
+						<th th:text="#{name}"></th >
+						<th th:text="#{credits}"></th>
+						<th th:text="#{grade}"></th>
+						<th th:text="#{score}"></th>
 					</tr>
 					</thead>					
 					<tbody>
