--- a/U6/SPRING_COMPLETO/src/main/resources/templates/asignaturasAlumnos.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/asignaturasAlumnos.html
@@ -4,7 +4,7 @@
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
-			<header th:insert="fragments/parts::menu"></header>			
+			<header th:insert="fragments/parts::menu"></header>		
 			<div class="col-8">
 				<h4 class="text-center mt-3" th:text="'Alumnos de:'+ ${asignatura.getNombre()}"></h4>
 				<table class="table table-stripped table-hover mt-5">
@@ -12,13 +12,14 @@
 					<tr>
 						<th>ID</th>
 						<th>NIF</th>
-						<th>Nombre</th>
-						<th>Primer Apellido</th>
-						<th>Segundo Apellido</th>
-						<th>Fecha de Nacimiento</th>
-						<th>Ciudad</th>
-						<th>Sexo</th>
-						<th>Nota</th>
+						<th th:text="#{name}"></th>
+						<th th:text="#{firstName}"></th>
+						<th th:text="#{secondName}"></th>
+						<th th:text="#{dateBirthady}"></th>
+						<th th:text="#{city}"></th>
+						<th th:text="#{sex}"></th>
+						<th th:text="#{score}"></th>
+						<th></th>
 					</tr>
 					</thead>					
 					<tbody>
