--- a/U6/SPRING_COMPLETO/src/main/resources/templates/departments.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/departments.html
@@ -11,7 +11,7 @@
 					<thead class="table-light">
 					<tr>
 						<th>ID</th>
-						<th>Nombre</th>
+						<th th:text="#{name}"></th>
 						<th></th>
 					</tr>
 					</thead>					
