--- a/U6/SPRING_COMPLETO/src/main/resources/templates/addDepartment.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/addDepartment.html
@@ -7,11 +7,11 @@
 			<header th:insert="fragments/parts::menu"></header>
 			<div class="col-6">
 				<form th:action="@{/departments/add}" method="post"	th:object="${dpto}">
-					<label for="nombre" class="form-label mt-3">Nombre</label>
+					<label for="nombre" class="form-label mt-3" th:text="#{name}"></label>
 					<input type="text" class="form-control" id="nombre" name="nombre"
 						th:field="*{nombre}" required>						
-					<h6 class="text-danger" th:if="${error!=null}" th:text="${'Departamento existente'}"></h6>	
-					<input type="submit" class="btn btn-primary w-100 mt-3" value="AÑADIR" />	
+					<h6 class="text-danger" th:if="${error!=null}" th:text="#{'errorDepartment'}"></h6>	
+					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{add}"> </button>
 				</form>
 			</div>
 			<footer th:replace="fragments/parts::footer(info='menu.adddpto')"></footer>
