--- a/U6/SPRING_COMPLETO/src/main/resources/templates/editAlumno.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/editAlumno.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Edit Profesor')"></head>
+<head th:replace="fragments/bootstrap::head(title='Edit Alumno')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
 			<header th:insert="fragments/parts::menu"></header>
 			<div class="col-6">
-				<form th:action="@{/profesores/edit}" method="post"	th:object="${profesor}">
+				<form th:action="@{/alumnos/edit}" method="post"	th:object="${alumno}">
 					<label for="id" class="form-label mt-3">Id</label>
 					<input type="text" class="form-control" id="id" name="id"
 						th:field="*{id}" readonly>
@@ -38,17 +38,11 @@
 					<input type="text" class="form-control" id="sexo" name="sexos"
 						th:field="*{sexo}" required>
 					<label for="departamento" class="form-label mt-3" th:text="#{department}"></label>
-					<select name="departamento" class="form-select mt-3"  th:field="*{departamento}">
-                                <option th:each="d : ${departamentos}" 
-                                th:value="${d.id}" 
-                                th:text="${d.nombre}" 
-                               ></option>
-                    </select>	
-					<h6 class="text-danger" th:if="${error!=null}" th:text="#{'errorProfesor'}"></h6>	
+					<h6 class="text-danger" th:if="${error!=null}" th:text="#{'errorAlumn'}"></h6>	
 					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{update}"> </button>	
 				</form>
 			</div>
-			<footer th:replace="fragments/parts::footer(info='menu.addprof')"></footer>
+			<footer th:replace="fragments/parts::footer(info='menu.addAlumn')"></footer>
 		</div>
 	</div>
 </body>
