--- a/U6/SPRING_COMPLETO/src/main/resources/templates/editGrado.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/editGrado.html
@@ -7,14 +7,14 @@
 			<header th:insert="fragments/parts::menu"></header>
 			<div class="col-6">
 				<form th:action="@{/grados/edit}" method="post"	th:object="${grado}">
-					<label for="id" class="form-label mt-3">Nombre</label>
+					<label for="id" class="form-label mt-3">ID</label>
 					<input type="text" class="form-control" id="id" name="id"
 						th:field="*{id}" readonly>
-					<label for="nombre" class="form-label mt-3">Nombre</label>
+					<label for="nombre" class="form-label mt-3" th:text="#{name}"></label>
 					<input type="text" class="form-control" id="nombre" name="nombre"
 						th:field="*{nombre}" required>						
-					<h6 class="text-danger" th:if="${error!=null}" th:text="${'Grado existente'}"></h6>	
-					<input type="submit" class="btn btn-primary w-100 mt-3" value="ACTUALIZAR" />	
+					<h6 class="text-danger" th:if="${error!=null}" th:text="#{'errorGrado'}"></h6>	
+					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{update}"> </button>	
 				</form>
 			</div>
 			<footer th:replace="fragments/parts::footer(info='menu.addgrado')"></footer>
