--- a/U6/SPRING_COMPLETO/src/main/resources/templates/departments.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/departments.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Departments')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.departments')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
@@ -19,7 +19,9 @@
 					 <tr th:each="d : ${departamentos}">
 					 	<td th:text="${d.getId()}"></td>
 					 	<td th:text="${d.getNombre()}"></td>
-					 	<td><a th:href="@{'/departments/edit?dpto='+${d.getId()}}"><i class="bi bi-pen-fill"></i></a></td>
+					 	<td><a th:href="@{'/departments/edit?dpto='+${d.getId()}}"><i class="bi bi-pen-fill"></i></a>
+					 	<a th:href="@{'/departments/profesores?dpto='+${d.getId()}}"><i class="bi bi-eye-fill"></i></a>	
+					 	</td>
 					 </tr>					
 					</tbody>
 				</table>
