--- a/U6/SPRING_COMPLETO/src/main/resources/templates/editProfesor.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/editProfesor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Edit Profesor')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.updateprof')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
@@ -48,7 +48,7 @@
 					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{update}"> </button>	
 				</form>
 			</div>
-			<footer th:replace="fragments/parts::footer(info='menu.addprof')"></footer>
+			<footer th:replace="fragments/parts::footer(info='menu.updateprof')"></footer>
 		</div>
 	</div>
 </body>
