--- a/U6/SPRING_COMPLETO/src/main/resources/templates/addDepartment.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/addDepartment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Add Dpto')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.adddpto')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
