--- a/U6/SPRING_COMPLETO/src/main/resources/templates/addGrado.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/addGrado.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Add Grado')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.addgrados')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
@@ -14,7 +14,7 @@
 					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{add}"> </button>		
 				</form>
 			</div>
-			<footer th:replace="fragments/parts::footer(info='menu.grados')"></footer>
+			<footer th:replace="fragments/parts::footer(info='menu.addgrados')"></footer>
 		</div>
 	</div>
 </body>
