--- a/U6/SPRING_COMPLETO/src/main/resources/templates/addProfesor.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/addProfesor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Add Profesor')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.addprof')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
@@ -46,7 +46,7 @@
 					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{add}"> </button>	
 				</form>
 			</div>
-			<footer th:replace="fragments/parts::footer(info='menu.addprofesor')"></footer>
+			<footer th:replace="fragments/parts::footer(info='menu.addprof')"></footer>
 		</div>
 	</div>
 </body>
