--- a/U6/SPRING_COMPLETO/src/main/resources/templates/alumnos.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/alumnos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head th:replace="fragments/bootstrap::head(title='Alumnos')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.students')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
