--- a/U6/SPRING_COMPLETO/src/main/resources/templates/editAsignatura.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/editAsignatura.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Edit Asignatura')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.updateSubject')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
@@ -43,7 +43,7 @@
 					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{update}"> </button>	
 				</form>
 			</div>
-			<footer th:replace="fragments/parts::footer(info='menu.editSubject')"></footer>
+			<footer th:replace="fragments/parts::footer(info='menu.updateSubject')"></footer>
 		</div>
 	</div>
 </body>
