--- a/U6/SPRING_COMPLETO/src/main/resources/templates/editDepartment.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/editDepartment.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="fragments/bootstrap::head(title='Add Departments')"></head>
+<head th:replace="fragments/bootstrap::head(title='menu.updateDepartment')"></head>
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
@@ -17,7 +17,7 @@
 					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{update}"> </button>
 				</form>
 			</div>
-			<footer th:replace="fragments/parts::footer(info='menu.adddpto')"></footer>
+			<footer th:replace="fragments/parts::footer(info='menu.updateDepartment')"></footer>
 		</div>
 	</div>
 </body>
