--- a/U6/SPRING_COMPLETO/src/main/resources/templates/fragments/bootstrap.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/fragments/bootstrap.html
@@ -1,6 +1,6 @@
 <head th:fragment="head(title)">
 <meta charset="UTF-8">
-<title th:text="${title}"></title>
+<title th:text="#{${title}}"></title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
