--- a/U6/SPRING_COMPLETO/src/main/resources/templates/departments.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/departments.html
@@ -5,6 +5,9 @@
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
 			<header th:insert="fragments/parts::menu"></header>
+			<div class="row mt-3 justify-content-end">
+            	<a class="text-center col-2 btn btn-primary" th:href="@{/departments/add}" th:text="#{menu.adddpto}"> </a>
+            </div>	
 			<h1 class="text-center mt-3" th:text="#{menu.departments}"></h1>
 			<div class="col-8">
 				<table class="table table-stripped table-hover">
