--- a/U6/SPRING_COMPLETO/src/main/resources/templates/fragments/parts.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/fragments/parts.html
@@ -16,6 +16,8 @@
 				</li>
 				<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item"><a class="nav-link text-white" th:href="@{/departments/add}" th:text="#{menu.adddpto}"></a>				
 				</li>
+				<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item"><a class="nav-link text-white" th:href="@{/departments/addprofesor}" th:text="#{menu.addprofDepart}"></a>				
+				</li>
 				<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item"><a class="nav-link text-white" th:href="@{/asignaturas/}" th:text="#{menu.subject}"></a>				
 				</li>
 				<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item"><a class="nav-link text-white" th:href="@{/asignaturas/add}" th:text="#{menu.addSubject}"></a>				
@@ -28,6 +30,8 @@
 				<li  sec:authorize="hasRole('ROLE_USER')" class="nav-item"><a class="nav-link text-white" th:href="@{/profesores/add}" th:text="#{menu.addprof}"></a></li>
 				<li  sec:authorize="hasRole('ROLE_USER')" class="nav-item"><a class="nav-link text-white" th:href="@{/grados/}" th:text="#{menu.grados}"></a></li>
 				<li  sec:authorize="hasRole('ROLE_USER')" class="nav-item"><a class="nav-link text-white" th:href="@{/grados/add}" th:text="#{menu.addgrados}"></a></li>
+				<li sec:authorize="hasRole('ROLE_USER')" class="nav-item"><a class="nav-link text-white" th:href="@{/grados/addasignatura}" th:text="#{menu.addSubjectGrad}"></a>				
+				</li>
 				<li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link text-white" th:href="@{/logout}"><i class="bi bi-box-arrow-left"></i></a></li>
 				<li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link text-white" th:href="@{/register}" th:text="#{menu.register}"></a>
 				</li>
