--- a/U6/SPRING_COMPLETO/src/main/resources/templates/profesoresDepartment.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/profesoresDepartment.html
@@ -4,7 +4,10 @@
 <body>
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
-			<header th:insert="fragments/parts::menu"></header>			
+			<header th:insert="fragments/parts::menu"></header>	
+			<div class="row mt-3 justify-content-end">
+            	<a class="text-center col-2 btn btn-primary" th:href="@{/departments/addprofesor}" th:text="#{menu.addprofDepart}"> </a>
+            </div>			
 			<div class="col-8">
 				<h4 class="text-center mt-3" th:text="|#{profOf}: ${departamento.getNombre()}|"></h4>
 				<table class="table table-stripped table-hover mt-5">
