--- a/U6/SPRING_COMPLETO/src/main/resources/templates/profesoresDepartment.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/profesoresDepartment.html
@@ -6,7 +6,7 @@
 		<div class="row mt-5 justify-content-center">
 			<header th:insert="fragments/parts::menu"></header>	
 			<div class="row mt-3 justify-content-end">
-            	<a class="text-center col-2 btn btn-primary" th:href="@{/departments/addprofesor}" th:text="#{menu.addprofDepart}"> </a>
+            	<a class="text-center col-2 btn btn-primary" th:href="@{|/departments/addprofesor?id_depart=${departamento.id}}|" th:text="#{menu.addprofDepart}"> </a>
             </div>			
 			<div class="col-8">
 				<h4 class="text-center mt-3" th:text="|#{profOf}: ${departamento.getNombre()}|"></h4>
