--- a/U6/SPRING_COMPLETO/src/main/resources/templates/addAsigGrado.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/addAsigGrado.html
@@ -14,11 +14,12 @@
                                 th:text="${a.nombre}" 
                                ></option>
                     </select>	
-					<label for="grado" class="form-label mt-3" th:text="#{menu.grados}"></label>
-					<select name="grado" class="form-select mt-3"  th:field="*{id_grado}">
+					<label for="id_grado" class="form-label mt-3" th:text="#{menu.grados}"></label>
+					<select name="id_grado" class="form-select mt-3" >
                                 <option th:each="g : ${grados}" 
                                 th:value="${g.id} " 
                                 th:text="${g.nombre}" 
+                                 th:selected="(${id_grad} == ${g.id})"
                                ></option>
                     </select>					
 					<h6 class="text-danger" th:if="${error!=null}" th:text="#{'errorGrado'}"></h6>	
