--- a/U6/SPRING_COMPLETO/src/main/resources/templates/gradoAsignatura.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/gradoAsignatura.html
@@ -5,7 +5,9 @@
 	<div class="container mt-5">
 		<div class="row mt-5 justify-content-center">
 			<header th:insert="fragments/parts::menu"></header>	
-			
+			<div class="row mt-3 justify-content-end">
+            	<a class="text-center col-2 btn btn-primary" th:href="@{|/grados/addasignatura?id_grad=${grado.id}}|" th:text="#{menu.addSubjectGrad}"> </a>
+            </div>
 			<div class="col-8">
 				<h3 class="text-center mt-3" th:text=" ${grado.nombre}"></h3>
 				<table class="table table-stripped table-hover">
