--- a/U6/SPRING_COMPLETO/src/main/resources/templates/gradoAsignatura.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/gradoAsignatura.html
@@ -17,9 +17,9 @@
 						<th th:text="#{name}"></th >
 						<th th:text="#{credits}"></th>
 						<th th:text="#{type}"></th>
-						<th > Curso</th>
-						<th> Cuatrimestre</th>
-						<th> Profesor</th>
+						<th th:text="#{course}"></th>
+						<th th:text="#{quarter}"></th>
+						<th th:text="#{profesor}"></th>
 						<th></th>
 					</tr>
 					</thead>					
