--- a/U6/SPRING_COMPLETO/src/main/resources/templates/addAsigProfesor.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/addAsigProfesor.html
@@ -24,7 +24,7 @@
                     </select>					
 					<h6 class="text-danger" th:if="${error!=null}" th:text="#{'errorGrado'}"></h6>	
 					
-					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{update}"> </button>		
+					<button type="submit" class="btn btn-primary w-100 mt-3" th:text="#{add}"> </button>		
 				</form>
 			</div>
 			<footer th:replace="fragments/parts::footer(info='menu.addSubjectProf')"></footer>
