--- a/U6/SPRING_COMPLETO/src/main/resources/templates/alumnosAsignaturas.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/alumnosAsignaturas.html
@@ -15,6 +15,7 @@
 						<th th:text="#{credits}"></th>
 						<th th:text="#{grade}"></th>
 						<th th:text="#{score}"></th>
+						<th></th>
 					</tr>
 					</thead>					
 					<tbody>
@@ -24,6 +25,7 @@
 					 	<td th:text="${a.getAsignatura().creditos}"></td>
 					 	<td th:text="${a.getAsignatura().curso}"></td>
 					 	<td th:text="${a.nota}"> </td>
+					 	<td><a th:href="@{|/alumnos/asignaturas/delete?asig=${a.asignatura.id}&alumn=${alumno.id}}|"><i class="bi bi-x-square"></i></a></td>
 					 </tr>					
 					</tbody>
 				</table>
