--- a/U6/SPRING_COMPLETO/src/main/resources/templates/asignaturasProfesor.html
+++ b/U6/SPRING_COMPLETO/src/main/resources/templates/asignaturasProfesor.html
@@ -8,6 +8,7 @@
 			<div class="row mt-3 justify-content-end">
             	<a class="text-center col-2 btn btn-primary" th:href="@{|/profesores/addasignatura?id_prof=${profesores.id}}|" th:text="#{menu.addSubjectProf}"> </a>
             </div>	
+            <h6 class="text-success" th:if="${correcto!=null}" th:text="|#{deleteAsigProf} ${profesores.nombre} ${profesores.apellido1} ${profesores.apellido2}|"></h6>
 			<div class="col-8">
 			<h4 class="text-center mt-3" th:text="|#{asigOf}: ${profesores.nombre} ${profesores.apellido1} ${profesores.apellido2}|"></h4>
 				<table class="table table-stripped table-hover">
